// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package bucket_metainfo;

import "gogo.proto";
import "encryption.proto";
import "google/protobuf/timestamp.proto";
import "pointerdb.proto";

// BucketMetainfo is a Satellite RPC service for interacting with buckets
service BucketMetainfo {
    rpc CreateBucket(BucketCreateRequest) returns (BucketCreateResponse);
    rpc GetBucket(BucketGetRequest) returns (BucketGetResponse);
    rpc DeleteBucket(BucketDeleteRequest) returns (BucketDeleteResponse);
    rpc ListBuckets(BucketsListRequest) returns (BucketsListResponse);
}

message BucketCreateRequest {
    Bucket bucket = 1;
}
message BucketCreateResponse {
    bytes bucket_id = 1;
}

message BucketGetRequest {
    bytes id = 1;
    bytes project_id = 2;
    bytes name = 3;
}
message BucketGetResponse {
    Bucket bucket = 1;
}

message BucketDeleteRequest {
    bytes id = 1;
    bytes project_id = 2;
    bytes name = 3;
}
message BucketDeleteResponse {}

message BucketsListRequest {
    bytes project_id = 1;
}
message BucketsListResponse {
  repeated Bucket buckets = 1;
}

message Bucket {
    bytes id = 1;
    bytes project_id = 2;
    bytes name = 3;
    int32 path_cipher = 4;
    google.protobuf.Timestamp created_at = 5;
    int64 default_segment_size = 6;
    encryption.EncryptionScheme default_encryption = 7;
    pointerdb.RedundancyScheme default_redundancy = 8;
}
